--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,36 +8,39 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-push-image:
-    runs-on: ubuntu-latest
+  docker:
     strategy:
       fail-fast: false
       matrix:
         include:
           - dockerfile: ./bird/Dockerfile
             image: ghcr.io/nxthdr/bird
+            os: ubuntu-24.04
             tags: |
               ghcr.io/nxthdr/bird:2.16
             build-args: |
               BIRD_VERSION=2.16
           - dockerfile: ./bird/Dockerfile
             image: ghcr.io/nxthdr/bird
+            os: ubuntu-24.04
             tags: |
               ghcr.io/nxthdr/bird:3.0.0
             build-args: |
               BIRD_VERSION=3.0.0
+
     permissions:
       contents: read
       packages: write
       attestations: write
       id-token: write
 
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Log in to the Container registry
-        uses: docker/login-action@327cd5a69de6c009b9ce71bce8395f28e651bf99
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
@@ -45,22 +48,24 @@ jobs:
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804
+        uses: docker/metadata-action@v5
         with:
           images: ${{ matrix.image }}
 
-      - name: Sync theme submodule
-        run: git submodule sync && git submodule update --init --recursive
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Build and push Docker image
         id: push
-        uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4
+        uses: docker/build-push-action@v6
         with:
           context: .
+          push: true
+          provenance: false
           file: ${{ matrix.dockerfile }}
           build-args: ${{ matrix.build-args }}
           tags: ${{ matrix.tags }}
-          push: true
+          labels: ${{ steps.meta.outputs.labels }}
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v2
