--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -34,6 +34,12 @@ jobs:
               ghcr.io/nxthdr/bird:3.1.0
             build-args: |
               BIRD_VERSION=3.1.0
+          - dockerfile: ./bird/Dockerfile.adj-rib-out
+            image: ghcr.io/nxthdr/bird
+            os: ubuntu-24.04
+            tags: |
+              ghcr.io/nxthdr/bird:2.18-adj-rib-out
+            needs_bird_repo: true
 
     permissions:
       contents: read
@@ -45,6 +51,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
+
+      - name: Checkout BIRD repository
+        if: ${{ matrix.needs_bird_repo }}
+        uses: actions/checkout@v6
+        with:
+          repository: matthieugouel/bird
+          ref: bmp-adj-rib-out
+          path: bird-source
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
